tests-compare/fixtures/babel/packages/babel-parser/test/fixtures/esprima/invalid-syntax/migrated_0213/input.js
function hello(arguments) {'use strict';}
